--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
   <name>ros_bb_dc_motors</name>
-  <version>0.0.0</version>
-  <description>The ros_bb_dc_motors package</description>
+  <version>0.1.0</version>
+  <description>A ROS package for controlling DC motors with the BeagleBone</description>
 
   <maintainer email="v.mayoralv@gmail.com">Víctor Mayoral Vilches</maintainer>
 
