--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>ros_bb_dc_motors</name>
+  <name>bb_dc_motors</name>
   <version>0.1.0</version>
   <description>A ROS package for controlling DC motors with the BeagleBone</description>
 
